--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
           <input id="profileOccupation" class="modal__form-control modal__form-control_input_occupation" type="text"
             placeholder="Occupation" name="profileOccupationInput" required minlength="2" maxlength="200">
           <span id="profileOccupation-error" class="modal__error"></span>
-          <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
+          <button class="modal__form-submit modal__form-edit" type="submit" aria-label="save button">Save</button>
         </form>
         <button class="modal__close-button modal__close-button_profile" type="button"
           aria-label="close button"></button>
@@ -65,7 +65,7 @@
           <input id="placeLink" class="modal__form-control modal__form-control_input_image" type="url"
             placeholder="Image Link" name="imageLinkInput" required>
           <span id="placeLink-error" class="modal__error"></span>
-          <button class="modal__form-submit" type="submit" aria-label="save button">Create</button>
+          <button class="modal__form-submit modal__form-create" type="submit" aria-label="save button">Create</button>
         </form>
         <button class="modal__close-button modal__close-button_place" type="button" aria-label="close button"></button>
       </div>
@@ -99,7 +99,7 @@
           <input id="avatar-url" class="modal__form-control modal__form-control_avatar" type="url"
             placeholder="Image Link" name="avatarInput" required>
           <span id="avatar-url-error" class="modal__error"></span>
-          <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
+          <button class="modal__form-submit modal__form-avatar" type="submit" aria-label="save button">Save</button>
         </form>
         <button class="modal__close-button modal__close-button_place" type="button" aria-label="close button"></button>
       </div>
